--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,4 @@
 {
-  "liveServer.settings.port": 5501
-}
-
-{
 	"liveSassCompile.settings.formats": [
 		{
 			"format": "expanded",
@@ -19,3 +15,9 @@
 	"liveSassCompile.settings.generateMap": true,
 	"liveSassCompile.settings.autoprefix": ["> 1%", "last 2 versions"]
 }
+
+
+// {
+//   "liveServer.settings.port": 5501
+// }
+
